[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=75.3.4",
    "setuptools-scm>=8",
]

[project]
name = "coilmq"
description = "Simple, lightweight, and easily extensible STOMP message broker."
readme = "README.md"
keywords = [
    "broker",
    "messaging",
    "server",
    "stomp",
]
license = { file = "LICENSE.md" }
authors = [
    { name = "Hans Lellelid", email = "hans@xmpl.org" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]
dynamic = [
    "version",
]
dependencies = [
    "click>=8.1.8",
    "pid>=3.0.4",
    "python-daemon>=3.1.2",
]
optional-dependencies.redis = [
    "redis>=6.1.1",
]
optional-dependencies.sqlalchemy = [
    "sqlalchemy<2",
]
urls.Changelog = "https://github.com/hozn/blob/master/docs/news.txt"
urls.Homepage = "https://github.com/hozn/coilmq"
urls.Issues = "https://github.com/hozn/issues"
scripts.coilmq = "coilmq.start:main"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "tests" },
]
docs = [
    "furo>=2025.12.19; python_full_version>='3.13'",
    "sphinx>=9.1.0; python_full_version>='3.13'",
    "sphinx-autodoc-typehints>=3.9.11; python_full_version>='3.13'",
    "sphinx-paramlinks>=0.6.0",
]
tests = [
    "fakeredis>=2.34.1",
    "importlib-resources>=6.4.5; python_full_version<'3.9'",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "sqlalchemy<2",
]

[tool.setuptools]
packages = [ "coilmq" ]

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
preview = true
lint.ignore = [
    "DTZ001", # call-datetime-without-tzinfo
    "DTZ005", # call-datetime-now-without-tzinfo
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true

[tool.pytest]
ini_options.addopts = "--doctest-modules --cov=coilmq --cov=tests"
ini_options.python_files = "*.py"

[tool.coverage]
report.exclude_also = [
    # ignore in-line stubs like ``def func() -> None: ...``:
    "^\\s*(((async )?def .*?)?\\)(\\s*0>.*?)?:\\s*)?\\.\\.\\.\\s*(#|$)",
    "def __repr__",
    "if __name__ == '__main__':",
    "if 0:",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise NotImplementedError()",
]
